--- a/app/src/main/res/layout/fragment_start_workout_menu.xml
+++ b/app/src/main/res/layout/fragment_start_workout_menu.xml
@@ -12,6 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_gravity="bottom"
-        android:background="@color/material_dynamic_neutral0" />
+        android:background="@color/black" />
 
 </FrameLayout>
