added last workout card

--- a/app/src/main/res/layout/activity_create_routine.xml
+++ b/app/src/main/res/layout/activity_create_routine.xml
@@ -1,64 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/RoutineLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:windowSoftInputMode="adjustPan">
+    android:layout_height="match_parent">
 
-
-    <ExpandableListView
-        android:id="@+id/ExpandableListViewRoutineItems"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/RoutineLayout"
         android:layout_width="match_parent"
-        android:layout_height="580dp"
-        android:descendantFocusability="beforeDescendants"
-        android:nestedScrollingEnabled="true"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextRoutineName" />
+        android:layout_height="wrap_content">
 
 
-    <Button
-        android:id="@+id/buttonSaveRoutine"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Save Routine"
-        app:layout_constraintEnd_toStartOf="@+id/buttonAddExercise"
-        app:layout_constraintHorizontal_bias="0.895"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ExpandableListViewRoutineItems" />
-
-    <Button
-        android:id="@+id/buttonAddExercise"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:text="add"
-        app:layout_constraintEnd_toStartOf="@+id/buttonDeleteExercise"
-        app:layout_constraintTop_toBottomOf="@+id/ExpandableListViewRoutineItems" />
-
-    <EditText
-        android:id="@+id/editTextRoutineName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:hint="Enter routine name"
-        android:textAlignment="center"
-        android:textSize="25sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/buttonDeleteExercise"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:text="Delete"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ExpandableListViewRoutineItems" />
+        <ExpandableListView
+            android:id="@+id/ExpandableListViewRoutineItems"
+            android:layout_width="match_parent"
+            android:layout_height="580dp"
+            android:descendantFocusability="beforeDescendants"
+            android:nestedScrollingEnabled="true"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextRoutineName" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/buttonSaveRoutine"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Save Routine"
+            app:layout_constraintEnd_toStartOf="@+id/buttonAddExercise"
+            app:layout_constraintHorizontal_bias="0.895"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ExpandableListViewRoutineItems" />
+
+        <Button
+            android:id="@+id/buttonAddExercise"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="add"
+            app:layout_constraintEnd_toStartOf="@+id/buttonDeleteExercise"
+            app:layout_constraintTop_toBottomOf="@+id/ExpandableListViewRoutineItems" />
+
+        <EditText
+            android:id="@+id/editTextRoutineName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:hint="Enter routine name"
+            android:textAlignment="center"
+            android:textSize="25sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/buttonDeleteExercise"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:text="Delete"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ExpandableListViewRoutineItems" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
