--- a/app/src/main/res/layout/workout_history_recycler_view_item.xml
+++ b/app/src/main/res/layout/workout_history_recycler_view_item.xml
@@ -43,7 +43,7 @@
                     android:layout_weight="1"
                     android:text="Date"
                     android:textSize="23sp"
-                    android:textAlignment="center"
+                    android:textAlignment="textEnd"
                     android:layout_marginEnd="10dp"
                     android:layout_marginStart="10dp" />
                 <TextView
