--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,10 +8,11 @@
     tools:context=".fragment.HomeFragment">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginTop="6dp"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -20,10 +21,11 @@
             android:id="@+id/textViewCurrentTrainingPlan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Your current training plan: "
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:textSize="20sp"/>
+            android:text="Your current training plan: "
+            android:textSize="25sp" />
+
         <Spinner
             android:id="@+id/spinnerTrainingPlans"
             android:layout_width="wrap_content"
@@ -35,13 +37,85 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/linearLayoutLastWorkout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Your last workout:"
+            android:textSize="25sp"
+            android:layout_gravity="center"/>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="8dp"
+            android:background="@color/white"
+            android:foreground="?attr/selectableItemBackground"
+            app:cardCornerRadius="3dp"
+            app:cardElevation="3dp"
+            app:cardUseCompatPadding="true"
+            android:clickable="true">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/textViewLastTrainingPlanName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:textSize="16sp"
+                    android:text="Plan name"
+                    android:textAlignment="center"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textViewLastTrainingDate"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Date"
+                        android:textSize="23sp"
+                        android:textAlignment="textEnd"
+                        android:layout_marginEnd="10dp"
+                        android:layout_marginStart="10dp" />
+                    <TextView
+                        android:id="@+id/textViewLastTrainingRoutineName"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textSize="23sp"
+                        android:text="Routine Name"
+                        android:layout_marginEnd="10dp"/>
+                </LinearLayout>
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
+
     <Button
         android:id="@+id/buttonStartWorkout"
-        android:layout_width="254dp"
-        android:layout_height="51dp"
-        android:layout_marginBottom="64dp"
+        android:layout_width="350dp"
+        android:layout_height="70dp"
+        android:layout_marginBottom="70dp"
         android:text="Start Workout"
-        android:textSize="20sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -50,6 +124,8 @@
         android:id="@+id/startWorkoutMenu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout="@layout/fragment_start_workout_menu"/>
+        tools:layout="@layout/fragment_start_workout_menu"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
