--- a/app/src/main/res/layout/fragment_training_history.xml
+++ b/app/src/main/res/layout/fragment_training_history.xml
@@ -14,6 +14,7 @@
         android:text="Training History"
         android:textAlignment="center"
         android:textSize="30sp"
+        android:layout_marginTop="6dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,7 +22,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewWorkoutHistory"
         android:layout_width="match_parent"
-        android:layout_height="625dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        android:layout_height="675dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        android:layout_marginTop="8dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
