--- a/app/src/main/res/layout/routine_expandable_title_layout.xml
+++ b/app/src/main/res/layout/routine_expandable_title_layout.xml
@@ -17,5 +17,6 @@
         android:text="@string/exercise_name"
         android:textSize="22sp"
         android:textStyle="bold"
+        android:layout_marginEnd="6dp"
         tools:ignore="RtlSymmetry" />
 </LinearLayout>
