--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -111,6 +111,19 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/buttonReturnToWorkout"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:text="Return to your workout"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="10dp"
+        android:textSize="23sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayoutLastWorkout" />
+
+    <Button
         android:id="@+id/buttonStartWorkout"
         android:layout_width="350dp"
         android:layout_height="70dp"
