--- a/app/src/main/res/layout/workout_history_recycler_view_item.xml
+++ b/app/src/main/res/layout/workout_history_recycler_view_item.xml
@@ -10,11 +10,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="8dp"
-        android:background="@color/white"
+        android:background="@color/cardview_dark_background"
         android:foreground="?attr/selectableItemBackground"
         app:cardCornerRadius="3dp"
         app:cardElevation="3dp"
         app:cardUseCompatPadding="true">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -26,34 +27,35 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
-                android:textSize="16sp"
                 android:text="Plan name"
-                android:textAlignment="center"/>
+                android:textAlignment="center"
+                android:textSize="16sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="5dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:padding="5dp">
 
                 <TextView
                     android:id="@+id/textViewHistoryDate"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp"
                     android:layout_weight="1"
                     android:text="Date"
-                    android:textSize="23sp"
                     android:textAlignment="textEnd"
-                    android:layout_marginEnd="10dp"
-                    android:layout_marginStart="10dp" />
+                    android:textSize="23sp" />
+
                 <TextView
                     android:id="@+id/textViewHistoryRoutineName"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
                     android:layout_weight="1"
-                    android:textSize="23sp"
                     android:text="Routine Name"
-                    android:layout_marginEnd="10dp"/>
+                    android:textSize="23sp" />
             </LinearLayout>
         </LinearLayout>
 
