--- a/app/src/main/res/layout/create_routine_recycler_view_item.xml
+++ b/app/src/main/res/layout/create_routine_recycler_view_item.xml
@@ -7,35 +7,51 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/linearLayoutExerciseTitleElement"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:clickable="true">
+
+        <ImageView
+            android:id="@+id/buttonExpand"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/baseline_expand_more_24"
+            android:rotation="-90"/>
 
         <TextView
             android:id="@+id/textViewExerciseName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="3dp"
+            android:layout_marginTop="7dp"
             android:layout_weight="1"
             android:text="Exercise Name"
             android:textSize="25sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/buttonExpand"
-            android:layout_width="50dp"
+        <ImageButton
+            android:id="@+id/imageButtonMove"
+            android:layout_width="30dp"
             android:layout_height="50dp"
-            android:layout_marginEnd="5dp"
-            android:background="@drawable/baseline_expand_more_24"
-            android:contentDescription="Expand" />
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/baseline_dehaze_24"
+            android:contentDescription="move" />
+
+
     </LinearLayout>
 
     <com.example.gymapp.layout.RoutineExpandableLayout
         android:id="@+id/exerciseDetails"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
 
 </LinearLayout>
