changed deleting routines, added animations

--- a/app/src/main/res/layout/activity_create_routine.xml
+++ b/app/src/main/res/layout/activity_create_routine.xml
@@ -25,7 +25,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerViewRoutineItems"
             android:layout_width="match_parent"
-            android:layout_height="580dp"
+            android:layout_height="600dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextRoutineName"/>
@@ -35,20 +35,20 @@
             android:id="@+id/buttonSaveRoutine"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="10dp"
             android:text="Save Routine"
-            app:layout_constraintEnd_toStartOf="@+id/buttonAddExercise"
-            app:layout_constraintHorizontal_bias="0.895"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recyclerViewRoutineItems" />
 
         <Button
             android:id="@+id/buttonAddExercise"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:text="add"
-            app:layout_constraintEnd_toStartOf="@+id/buttonDeleteExercise"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginEnd="30dp"
+            android:background="@drawable/baseline_add_circle_24"
+            android:contentDescription="add"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recyclerViewRoutineItems" />
 
         <EditText
@@ -62,15 +62,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/buttonDeleteExercise"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:text="Delete"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/recyclerViewRoutineItems" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
