--- a/app/src/main/res/layout/create_routine_recycler_view_item.xml
+++ b/app/src/main/res/layout/create_routine_recycler_view_item.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    android:id="@+id/wholeExerciseElement"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -29,7 +31,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="60dp"
             android:layout_weight="1"
-            android:text="Exercise Name"
+            android:hint="Exercise name"
             android:textSize="22sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -40,7 +42,7 @@
             android:id="@+id/imageButtonMove"
             android:layout_width="30dp"
             android:layout_height="50dp"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="10dp"
             android:background="@drawable/baseline_dehaze_24"
             android:contentDescription="move" />
